--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-30-12  Paul Brook  <paul@codesourcery.com>
+
+	* config/arm/arm.h (TARGET_CPU_CPP_BUILTINS): Always define __arm__.
+
 2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* builtins.c (expand_builtin_apply_args_1): Fix typo in previous
