--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,16 @@
+2003-12-30  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* g++.old-deja/g++.jason/thunk2.C: Remove traces of dead
+	ports.
+	* g++.old-deja/g++.jason/thunk3.C: Likewise.
+	* g++.old-deja/g++.law/profile1.C: Likewise.
+	* gcc.c-torture/compile/981006-1.c: Likewise.
+	* gcc.c-torture/execute/loop-2e.x: Likewise.
+	* gcc.c-torture/execute/loop-2f.x: Remove.
+	* gcc.c-torture/execute/loop-2g.x: Likewise.
+	* gcc.c-torture/execute/strct-varg-1.x: Likewise.
+	* gcc.dg/20020312-2.c: Remove traces of dead ports.
+
 2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/13507
