--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/abi/vbase10.C: XFAIL on arm*-*-*.
+
 2003-12-30  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* g++.old-deja/g++.jason/thunk2.C: Remove traces of dead
