* doc/tm.texi (PREFERRED_RELOAD_CLASS): Describe use of NO_REGS 	with constants.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75245 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-30  Geoffrey Keating  <geoffk@greed.local>
+
+	* doc/tm.texi (PREFERRED_RELOAD_CLASS): Describe use of NO_REGS
+	with constants.
+
 2003-12-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* stor-layout.c (layout_decl): Turn bitfields into ordinary
