* gcc.dg/sibcall-4.c: Replace mn10?00 with mn10300.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75248 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-30  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* gcc.dg/sibcall-4.c: Replace mn10?00 with mn10300.
+
 2003-12-30  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/10079
