* config/i386/i386.h: Remove an unnecessary #undef.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-30  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/i386/i386.h: Remove an unnecessary #undef.
+
 2003-12-30  Roger Sayle  <roger@eyesopen.com>
 
 	* cppfiles.c (pch_open_file): Minor tweak to work-around native
