--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* config/arm/arm.h (THUMB_LEGITIMATE_CONSTANT_P): Accept
+	CONSTANT_P_RTX.
+
 2003-30-12  Paul Brook  <paul@codesourcery.com>
 
 	* longlong.h: protect arm inlines with !defined (__thumb__)
