--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -297,6 +297,18 @@
   ""
   "
 {
+  /* Fixup PIC cases.  */
+  if (flag_pic)
+    {
+      if (symbolic_operand (operands[1], QImode))
+        {
+          if (reload_in_progress || reload_completed)
+            operands[1] = m32r_legitimize_pic_address (operands[1], operands[0]);
+          else
+            operands[1] = m32r_legitimize_pic_address (operands[1], NULL_RTX);
+        }
+    }
+
   /* Everything except mem = const or mem = mem can be done easily.
      Objects in the small data area are handled too.  */
 
@@ -325,6 +337,18 @@
   ""
   "
 {
+  /* Fixup PIC cases.  */
+  if (flag_pic)
+    {
+      if (symbolic_operand (operands[1], HImode))
+        {
+          if (reload_in_progress || reload_completed)
+            operands[1] = m32r_legitimize_pic_address (operands[1], operands[0]);
+          else
+            operands[1] = m32r_legitimize_pic_address (operands[1], NULL_RTX);
+        }
+    }
+
   /* Everything except mem = const or mem = mem can be done easily.  */
 
   if (GET_CODE (operands[0]) == MEM)
@@ -365,6 +389,18 @@
   ""
   "
 {
+  /* Fixup PIC cases.  */
+  if (flag_pic)
+    {
+      if (symbolic_operand (operands[1], SImode))
+        {
+          if (reload_in_progress || reload_completed)
+            operands[1] = m32r_legitimize_pic_address (operands[1], operands[0]);
+          else
+            operands[1] = m32r_legitimize_pic_address (operands[1], NULL_RTX);
+        }
+    }
+
   /* Everything except mem = const or mem = mem can be done easily.  */
 
   if (GET_CODE (operands[0]) == MEM)
@@ -590,6 +626,18 @@
   ""
   "
 {
+  /* Fixup PIC cases.  */
+  if (flag_pic)
+    {
+      if (symbolic_operand (operands[1], DImode))
+        {
+          if (reload_in_progress || reload_completed)
+            operands[1] = m32r_legitimize_pic_address (operands[1], operands[0]);
+          else
+            operands[1] = m32r_legitimize_pic_address (operands[1], NULL_RTX);
+        }
+    }
+
   /* Everything except mem = const or mem = mem can be done easily.  */
 
   if (GET_CODE (operands[0]) == MEM)
@@ -619,6 +667,18 @@
   ""
   "
 {
+  /* Fixup PIC cases.  */
+  if (flag_pic)
+    {
+      if (symbolic_operand (operands[1], SFmode))
+        {
+          if (reload_in_progress || reload_completed)
+            operands[1] = m32r_legitimize_pic_address (operands[1], operands[0]);
+          else
+            operands[1] = m32r_legitimize_pic_address (operands[1], NULL_RTX);
+        }
+    }
+
   /* Everything except mem = const or mem = mem can be done easily.  */
 
   if (GET_CODE (operands[0]) == MEM)
@@ -659,6 +719,18 @@
   ""
   "
 {
+  /* Fixup PIC cases.  */
+  if (flag_pic)
+    {
+      if (symbolic_operand (operands[1], DFmode))
+        {
+          if (reload_in_progress || reload_completed)
+            operands[1] = m32r_legitimize_pic_address (operands[1], operands[0]);
+          else
+            operands[1] = m32r_legitimize_pic_address (operands[1], NULL_RTX);
+        }
+    }
+
   /* Everything except mem = const or mem = mem can be done easily.  */
 
   if (GET_CODE (operands[0]) == MEM)
@@ -2269,7 +2341,27 @@
   [(set_attr "type" "uncond_branch")
    (set_attr "length" "2")])
  
-(define_insn "tablejump"
+(define_expand "tablejump"
+  [(parallel [(set (pc) (match_operand 0 "register_operand" "r"))
+              (use (label_ref (match_operand 1 "" "")))])]
+  ""
+  "
+{
+  /* In pic mode, our address differences are against the base of the
+     table.  Add that base value back in; CSE ought to be able to combine
+     the two address loads.  */
+  if (flag_pic)
+    {
+      rtx tmp, tmp2;
+
+      tmp = gen_rtx_LABEL_REF (Pmode, operands[1]);
+      tmp2 = operands[0];
+      tmp = gen_rtx_PLUS (Pmode, tmp2, tmp);
+      operands[0] = memory_address (Pmode, tmp);
+    }
+}")
+
+(define_insn "*tablejump_insn"
   [(set (pc) (match_operand:SI 0 "address_operand" "p"))
    (use (label_ref (match_operand 1 "" "")))]
   ""
@@ -2284,7 +2376,11 @@
 		    (match_operand 1 "" ""))
 	     (clobber (reg:SI 14))])]
   ""
-  "")
+  "
+{
+  if (flag_pic)
+    current_function_uses_pic_offset_table = 1;
+}")
 
 (define_insn "*call_via_reg"
   [(call (mem:SI (match_operand:SI 0 "register_operand" "r"))
@@ -2335,7 +2431,11 @@
 			 (match_operand 2 "" "")))
 	     (clobber (reg:SI 14))])]
   ""
-  "")
+  "                                                                             
+{
+  if (flag_pic)
+    current_function_uses_pic_offset_table = 1;
+}")
 
 (define_insn "*call_value_via_reg"
   [(set (match_operand 0 "register_operand" "=r")
@@ -2356,6 +2456,9 @@
   "*
 {
   int call26_p = call26_operand (operands[1], FUNCTION_MODE);
+
+  if (flag_pic)
+    current_function_uses_pic_offset_table = 1;
 
   if (! call26_p)
     {
@@ -2398,11 +2501,13 @@
 ;; Special pattern to flush the icache.
 
 (define_insn "flush_icache"
-  [(unspec_volatile [(match_operand 0 "memory_operand" "m")] 0)]
+  [(unspec_volatile [(match_operand 0 "memory_operand" "m")] 0)
+   (match_operand 1 "" "")
+   (clobber (reg:SI 17))]
   ""
-  "* return \"nop ; flush-icache\";"
-  [(set_attr "type" "int2")
-   (set_attr "length" "2")])
+  "* return \"trap %#%1 ; flush-icache\";"
+  [(set_attr "type" "int4")
+   (set_attr "length" "4")])
 
 ;; Speed up fabs and provide correct sign handling for -0
 
@@ -2581,3 +2686,44 @@
   "* m32r_output_block_move (insn, operands); return \"\"; "
   [(set_attr "type"	"store8")
    (set_attr "length"	"72")]) ;; Maximum
+
+;; PIC
+
+/* When generating pic, we need to load the symbol offset into a register.
+   So that the optimizer does not confuse this with a normal symbol load
+   we use an unspec.  The offset will be loaded from a constant pool entry,
+   since that is the only type of relocation we can use.  */
+
+(define_insn "pic_load_addr"
+  [(set (match_operand:SI 0 "register_operand" "=r")
+        (unspec:SI [(match_operand 1 "" "")] 4))]
+  "flag_pic"
+  "ld24 %0,%#%1"
+  [(set_attr "type" "int4")])
+
+;; Load program counter insns.
+
+(define_insn "get_pc"
+  [(clobber (reg:SI 14))
+   (set (match_operand 0 "register_operand" "=r")
+        (unspec [(match_operand 1 "" "")] 5))
+   (use (match_operand:SI 2 "immediate_operand" ""))]
+  "flag_pic"
+  "*
+{
+  if (INTVAL(operands[2]))
+    return \"bl.s .+4\;ld24 %0,%#%1\;add %0,lr\";
+  else
+    return \"bl.s .+4\;seth %0,%#shigh(%1)\;add3 %0,%0,%#low(%1+4)\;add %0,lr\";}"
+  [(set (attr "length") (if_then_else (ne (match_dup 2) (const_int 0))
+                                      (const_int 8)
+                                      (const_int 12)))])
+
+(define_expand "builtin_setjmp_receiver"
+  [(label_ref (match_operand 0 "" ""))]
+  "flag_pic"
+  "
+{
+  m32r_load_pic_register ();
+  DONE;
+}")
